--- a/css/moremainstyle.css
+++ b/css/moremainstyle.css
@@ -25,23 +25,23 @@ body, html {
     left: 0;
   }
   .back-button {
-    background: #ecbe63da;
-    border-top: 1px solid #f7d289;
-    border-right: 1px solid rgb(242, 189, 105);
-    border-bottom: 1px solid rgb(242, 189, 105);
-    border-left: 1px solid rgb(242, 189, 105);
+    background: #FDF8C3;
+    border-top: 1px solid #fff79d;
+    border-right: 1px solid #FDF8C3;
+    border-bottom: 1px solid #FDF8C3;
+    border-left: 1px solid #FDF8C3;
     -webkit-border-radius: 7px;
     -moz-border-radius: 7px;
     border-radius: 7px;
-    -webkit-box-shadow: inset 0 1px 10px 1px rgb(242, 189, 105), 0px 1px 0 rgb(255, 178, 54), 0 6px 0px #084430dc, 0 8px 4px 1px #000000aa;
-    -moz-box-shadow: inset 0 1px 10px 1px #ffdd99, 0px 1px 0 rgb(255, 178, 54), 0 6px 0px #084430dc, 0 8px 4px 1px #000000aa;
-    box-shadow: inset 0 1px 10px 1px #ffdd99, 0px 1px 0 rgb(255, 178, 54), 0 6px 0px #084430dc, 0 8px 4px 1px #000000aa;
+    -webkit-box-shadow: inset 0 1px 10px 1px #FDF8C3, 0px 1px 0 #ffd900e4, 0 6px 0px #3B6552, 0 8px 4px 1px #000000aa;
+    -moz-box-shadow: inset 0 1px 10px 1px #FDF8C3, 0px 1px 0 #ffd900e4, 0 6px 0px #3B6552, 0 8px 4px 1px #000000aa;
+    box-shadow: inset 0 1px 10px 1px #FDF8C3, 0px 1px 0 #ffd900e4, 0 6px 0px #3B6552, 0 8px 4px 1px #000000aa;
     color: #015443;
     font: bold 20px "helvetica neue", helvetica, arial, sans-serif;
     line-height: 1;
     padding: 12px 0 12px 0;
     text-align: center;
-    text-shadow: 2px -1px 1px #ef8b0996;
+    text-shadow: 2px -1px 1px #3b65523d;
     width: 140px;
     -webkit-background-clip: padding-box;
     margin: 10px;
@@ -49,16 +49,16 @@ body, html {
 }
 
   .back-button:hover {
-    -webkit-box-shadow: inset 0 0px 20px 1px rgb(255, 178, 54), 0px 1px 0 rgb(255, 178, 54), 0 6px 0px #084430dc, 0 8px 4px 1px #000000aa;
-    -moz-box-shadow: inset 0 0px 20px 1px rgb(255, 178, 54), 0px 1px 0 rgb(255, 178, 54), 0 6px 0px #084430dc, 0 8px 4px 1px #000000aa;
-    box-shadow: inset 0 0px 20px 1px rgb(255, 178, 54), 0px 1px 0 rgb(255, 178, 54), 0 6px 0px #084430dc, 0 8px 4px 1px #000000aa;
+    -webkit-box-shadow: inset 0 0px 20px 1px #ffd900e4, 0px 1px 0 #ffd900e4, 0 6px 0px #3B6552, 0 8px 4px 1px #000000aa;
+    -moz-box-shadow: inset 0 0px 20px 1px #ffd900e4, 0px 1px 0 #ffd900e4, 0 6px 0px #3B6552, 0 8px 4px 1px #000000aa;
+    box-shadow: inset 0 0px 20px 1px #ffd900e4, 0px 1px 0 #ffd900e4, 0 6px 0px #3B6552, 0 8px 4px 1px #000000aa;
     cursor: pointer;
 }
 
   .back-button:active{
-    -webkit-box-shadow: inset 0 1px 10px 1px #ffdd99, 0 1px 0 rgb(255, 178, 54), 0 2px 0 #084430dc, 0 4px 3px 0 #000000aa;
-    -moz-box-shadow: inset 0 1px 10px 1px #ffdd99, 0 1px 0 rgb(255, 178, 54), 0 2px 0 #084430dc, 0 4px 3px 0 #000000aa;
-    box-shadow: inset 0 1px 10px 1px #ffdd99, 0 1px 0 rgb(255, 178, 54), 0 2px 0 #084430dc, 0 4px 3px 0 #000000aa;
+    -webkit-box-shadow: inset 0 1px 10px 1px #ffd900e4, 0 1px 0 #ffd900e4, 0 2px 0 #3B6552, 0 4px 3px 0 #000000aa;
+    -moz-box-shadow: inset 0 1px 10px 1px #ffd900e4, 0 1px 0 #ffd900e4, 0 2px 0 #3B6552, 0 4px 3px 0 #000000aa;
+    box-shadow: inset 0 1px 10px 1px #ffd900e4, 0 1px 0 #ffd900e4, 0 2px 0 #3B6552, 0 4px 3px 0 #000000aa;
     transform: translateY(4px);
   }
 
@@ -69,8 +69,8 @@ body, html {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 35px;
-    background-color: #efbc63b7; 
-    color: #015443; 
+    background-color: #fdf8c3e4; 
+    color: #3B6552; 
     margin: 0 auto; /* This will center the container horizontally */
     width: 50%;
     border-radius: 20px;
